--- a/node/package.json
+++ b/node/package.json
@@ -36,6 +36,7 @@
     "@counterfactual/contracts": "0.0.3",
     "@counterfactual/machine": "0.0.1",
     "@counterfactual/types": "0.0.1",
+    "@firebase/util": "0.*",
     "ethers": "4.0.26",
     "eventemitter3": "^3.1.0",
     "p-queue": "^3.1.0",
