Apply 'types' field in tsconfigs (#842)

--- a/machine/tsconfig.json
+++ b/machine/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "resolveJsonModule": true,
     "outDir": "dist/",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "types": ["jest"]
   },
   "include": ["src", "test"],
   "exclude": ["dist"]
