--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -6,7 +6,8 @@
     "typeRoots": [
       "../../node_modules/@types",
       "../../node_modules/@counterfactual/typescript-typings/types"
-    ]
+    ],
+    "types": ["jest"]
   },
   "include": ["src", "test"]
 }
