--- a/cf.js/tsconfig.json
+++ b/cf.js/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "sourceRoot": ".",
     "declarationDir": "dist/",
-    "outDir": "dist/"
+    "outDir": "dist/",
+    "types": ["jest"]
   },
   "include": ["src", "test"]
 }
