--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -15,7 +15,8 @@
     "typeRoots": [
       "../../node_modules/@types",
       "../../node_modules/@counterfactual/typescript-typings/types"
-    ]
+    ],
+    "types": ["jest", "ethers"]
   },
   "include": ["src"],
   "exclude": ["__mocks__", "src/**/*.spec.ts", "src/**/*.e2e.ts"]
