--- a/dapp-tic-tac-toe/package.json
+++ b/dapp-tic-tac-toe/package.json
@@ -10,10 +10,10 @@
   },
   "scripts": {
     "start": "BROWSER=none && react-scripts start",
-    "build": "react-scripts build && cp src/_redirects build/_redirects",
+    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build && cp src/_redirects build/_redirects",
     "netlify": "sh netlify.sh",
-    "test": "CI=true react-scripts test --setupFiles ./src/testSetup.js",
-    "eject": "react-scripts eject"
+    "test": "SKIP_PREFLIGHT_CHECK=true CI=true react-scripts test --setupFiles ./src/testSetup.js",
+    "eject": "SKIP_PREFLIGHT_CHECK=true react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
