--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -49,6 +49,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.8",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/knex": "^0.15.1",
     "@types/koa": "^2.0.48",
@@ -57,7 +58,7 @@
     "axios": "^0.18.0",
     "env-cmd": "^8.0.2",
     "firebase-server": "^1.0.1",
-    "jest": "^24.1.0",
+    "jest": "24.1.0",
     "sqlite3": "^4.0.4",
     "ts-jest": "24.0.0",
     "ts-node": "^7.0.1",
