--- a/playground/package.json
+++ b/playground/package.json
@@ -30,9 +30,11 @@
   "homepage": "https://counterfactual.com",
   "devDependencies": {
     "@counterfactual/typescript-typings": "^0.0.1",
-    "@types/jest": "24.0.7",
+    "@types/jest": "23.3.14",
     "@types/puppeteer": "1.12.1",
     "env-cmd": "^8.0.2",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
     "puppeteer": "1.12.0",
     "rollup-plugin-replace": "^2.1.0",
     "workbox-build": "3.4.1"
