--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -25,6 +25,7 @@
     "build-ts": "tsc -p tsconfig.heroku.json",
     "disabled-postinstall": "npm run build-ts",
     "lint": "tslint -c tslint.json -p .",
+    "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist/",
     "start": "env-cmd development --fallback ts-node src/",
     "test": "env-cmd test --fallback jest --forceExit",
@@ -36,7 +37,7 @@
   "dependencies": {
     "@counterfactual/node": "^0.0.1",
     "@counterfactual/types": "^0.0.1",
-    "@ebryn/jsonapi-ts": "^0.0.3",
+    "@ebryn/jsonapi-ts": "^0.0.4",
     "@koa/cors": "^2.2.3",
     "escape-string-regexp": "^1.0.5",
     "jsonwebtoken": "^8.4.0",
@@ -61,7 +62,7 @@
     "jest": "24.1.0",
     "sqlite3": "^4.0.4",
     "ts-jest": "24.0.0",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.0.2",
     "tslint": "^5.11.0",
     "typescript": "^3.1.2"
   }
