--- a/playground-server/tsconfig.heroku.json
+++ b/playground-server/tsconfig.heroku.json
@@ -17,7 +17,7 @@
     "lib": ["es2017", "dom", "esnext.asynciterable"],
     "target": "es2017",
     "types": ["jsonwebtoken", "knex", "koa", "koa__cors", "uuid"],
-    "module": "commonjs",
+    "module": "esnext",
     "sourceMap": true,
     "skipLibCheck": true,
     "strict": true
