--- a/playground-server/tsconfig.json
+++ b/playground-server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "target": "es2017",
     "experimentalDecorators": true,
     "types": ["jsonwebtoken", "knex", "koa", "koa__cors", "uuid", "jest"],
