--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -35,8 +35,8 @@
     "url": "https://github.com/counterfactual/monorepo/issues"
   },
   "dependencies": {
-    "@counterfactual/node": "^0.0.1",
-    "@counterfactual/types": "^0.0.1",
+    "@counterfactual/node": "0.0.4",
+    "@counterfactual/types": "0.0.5",
     "@ebryn/jsonapi-ts": "^0.0.4",
     "@koa/cors": "^2.2.3",
     "escape-string-regexp": "^1.0.5",
