--- a/typescript-typings/package.json
+++ b/typescript-typings/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@counterfactual/typescript-typings",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "private": true,
   "license": "MIT",
   "engines": {
     "node": ">=6.12"
