--- a/playground-server/tsconfig.heroku.json
+++ b/playground-server/tsconfig.heroku.json
@@ -1,28 +1,4 @@
 {
-  "compilerOptions": {
-    "allowJs": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": true,
-    "noImplicitReturns": true,
-    "noLib": false,
-    "removeComments": true,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "lib": ["es2017", "dom", "esnext.asynciterable"],
-    "target": "es2017",
-    "types": ["jsonwebtoken", "knex", "koa", "koa__cors", "uuid"],
-    "module": "esnext",
-    "sourceMap": true,
-    "skipLibCheck": true,
-    "strict": true
-  },
-  "exclude": [
-    "test"
-  ]
+  "extends": "./tsconfig.do-not-edit-merged.json",
+  "include": ["src"]
 }
