[ttt-bot] Ptb/ttt bot (#795)
* ttt-bot initial work

* first attempt at connecting to bot

* another step closer

* the saga continues

* closer

* rebase

* update store

* maybe

* continuing

* initial unit tests

* add ttt integration test infrastructure

* it works!

* cleanup

* cleanup 2

* fix contract lint issue

* add integration test

* remove test db sql

* update yarn.lock

* more changes

* make bot setup resumable

* merge fixes

* Remove nohoist for eventemitter3

* lint

* Updates

* WIP refactoring bot

* baseline working version of ttt bot

* WIP updated node type usage

* make bot restartable

* assign base url through envvar

* fix failing tests

* cleanup

* lint

* revert db connection change

* cleanup bot

* Update types package dependency version

* fix high roller test setup

* stop using .flat

--- a/node-provider/package.json
+++ b/node-provider/package.json
@@ -13,10 +13,11 @@
     "test": "tsc -b && jest --runInBand --detectOpenHandles --bail --forceExit",
     "test-debug": "node --inspect-brk jest --runInBand",
     "lint:fix": "tslint -c tslint.json -p . --fix",
-    "lint": "tslint -c tslint.json -p ."
+    "lint": "tslint -c tslint.json -p .",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@counterfactual/types": "0.0.8",
+    "@counterfactual/types": "0.0.9",
     "@types/jest": "24.0.9",
     "@types/node": "^11.9.0",
     "jest": "23.6.0",
