[playground][playground-server][apps][node][dapp-tic-tac-toe] Support Playground functionality on Kovan (2) (#1000)
* Add Kovan contracts

* Update playground to support Kovan

* Update supported networks & package version

* Update PS to use dynamic network

* Remove logs

* Deploy app contracts to Kovan

* dApp uses correct contract address based on selected network

* WIP getting dApp working

* TTT proposal gets accepted

* TTT works on Kovan

* Misc touch ups

* Update README

* Use correct block time waiting for node tests

* Create user conditional on multisig tx deploy; retry on multisig creation

* Update TTT bot provider

* Exclusively support Kovan

* Fix non-kovan error message

* Ensure TTT bot works on Kovan

* Update TTT contract address

* Use constant variable for network ID

* Update README

* Update network ID constant variable

* Update stale HR contract address reference

--- a/dapp-tic-tac-toe/package.json
+++ b/dapp-tic-tac-toe/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@counterfactual/dapp-tic-tac-toe",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "dependencies": {
+    "@counterfactual/apps": "0.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
