--- a/high-roller-bot/package.json
+++ b/high-roller-bot/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@counterfactual/tic-tac-toe-bot",
-  "version": "0.0.6",
-  "description": "A bot for the Tic Tac Toe Playground dApp.",
+  "name": "@counterfactual/high-roller-bot",
+  "version": "0.0.3",
+  "description": "A bot for the High Roller Playground dApp.",
   "author": "Counterfactual",
   "homepage": "https://github.com/counterfactual/monorepo",
   "license": "MIT",
@@ -23,16 +23,14 @@
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
-    "start": "env-cmd development ts-node src/",
-    "test": "env-cmd test jest --forceExit"
+    "start": "env-cmd development ts-node src/"
   },
   "bugs": {
     "url": "https://github.com/counterfactual/monorepo/issues"
   },
   "dependencies": {
-    "@counterfactual/node": "0.1.6",
-    "@counterfactual/dapp-tic-tac-toe": "0.1.2",
-    "@counterfactual/types": "^0.0.9",
+    "@counterfactual/node": "0.1.5",
+    "@counterfactual/types": "0.0.9",
     "eventemitter3": "^3.1.0"
   },
   "devDependencies": {
