--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -23,7 +23,7 @@
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
-    "start": "env-cmd development --fallback ts-node src/",
+    "start": "env-cmd development --fallback ts-node -r dotenv-extended/config src/",
     "test": "env-cmd test --fallback jest --forceExit",
     "test:ci": "env-cmd test --fallback jest --forceExit"
   },
@@ -55,6 +55,7 @@
     "@types/koa__cors": "^2.2.3",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
+    "dotenv-extended": "^2.3.0",
     "env-cmd": "^8.0.2",
     "jest": "24.1.0",
     "sqlite3": "^4.0.4",
