[playground] [playground-server] Implements Heartbeats API (#1073)
* playground-server: added Heartbeat API

* playground: added API call to Heartbeats

* playground: added Heartbeat API local type

* playground: refactored dialog to support buttonless dialogs

* playground: added schemaVersion/maintenanceMode states

* playground: added UI for maintenance mode and schema mismatch

* playground-server: forced manintenanceMode to match against "true"

* playground: implemented schemaVersion check + UI

* playground-server: added env-vars

* playground: nukes localStorage on a schema version change

* playground: prioritizing heartbeat API to be called first

--- a/playground-server/.env-cmdrc
+++ b/playground-server/.env-cmdrc
@@ -8,6 +8,8 @@
     "FIREBASE_SERVER_HOST": "localhost",
     "FIREBASE_SERVER_PORT": "5555",
     "ETHEREUM_NETWORK": "kovan",
+    "PLAYGROUND_SCHEMA_VERSION": 2,
+    "PLAYGROUND_MAINTENANCE_MODE": "false",
     "NODE_ENV": "development"
   },
   "test": {
