[node] More versatile and verbose logging (#1080)
* Add better logging

* Introduce node logging on nodejs and browser

* Add log prefix

* lint

* Describe logging failure case

--- a/playground-server/.env-cmdrc
+++ b/playground-server/.env-cmdrc
@@ -10,7 +10,8 @@
     "ETHEREUM_NETWORK": "kovan",
     "PLAYGROUND_SCHEMA_VERSION": 2,
     "PLAYGROUND_MAINTENANCE_MODE": "false",
-    "NODE_ENV": "development"
+    "NODE_ENV": "development",
+    "LOG_LEVEL": "DEBUG"
   },
   "test": {
     "STORE_PREFIX": "test",
