--- a/playground/package.json
+++ b/playground/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@counterfactual/node": "0.1.15",
     "@counterfactual/types": "0.0.9",
-    "@stencil/core": "^0.18.0",
+    "@stencil/core": "0.18.1-0",
     "@stencil/router": "^0.3.0",
     "@stencil/sass": "^0.1.1",
     "eventemitter3": "^3.1.0"
@@ -37,7 +37,7 @@
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "puppeteer": "1.13.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "workbox-build": "3.6.3"
+    "rollup-plugin-replace": "^2.1.1",
+    "workbox-build": "4.1.1"
   }
 }
