--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,7 @@
     "networks"
   ],
   "scripts": {
-    "build": "waffle waffle.json",
+    "build": "waffle waffle.js",
     "migrate": "truffle migrate",
     "test": "ts-mocha test/*",
     "lint:fix": "yarn lint:ts:fix && yarn lint:sol:fix",
@@ -34,7 +34,7 @@
     "chai": "^4.2.0",
     "dotenv": "^7.0.0",
     "eth-gas-reporter": "0.1.12",
-    "ethereum-waffle": "2.0.8",
+    "ethereum-waffle": "2.0.9",
     "ethers": "4.0.27",
     "ethlint": "1.2.4",
     "ganache-cli": "6.4.1",
