[node] Fix node test scripts (#1357)
* Fix ability to specify test regex

* Update test scripts

--- a/node/package.json
+++ b/node/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p . && rollup -c",
-    "test": "yarn run test:no-ganache && yarn run test:with-ganache",
-    "test:with-ganache": "./scripts/test.sh",
-    "test:no-ganache": "jest --testPathIgnorePatterns=test/machine/integration --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
+    "test": "yarn run test:machine && yarn run test:node",
+    "test:machine": "yarn run test:machine:integration && yarn run test:machine:unit",
+    "test:machine:integration": "./scripts/test.sh",
+    "test:machine:unit": "jest --testPathPattern=test/machine/unit --bail --forceExit",
+    "test:node": "jest --testPathIgnorePatterns=test/machine --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "lint": "tslint -c tslint.json -p ."
