Reverse order of script execution (#1364)

--- a/node/package.json
+++ b/node/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p . && rollup -c",
-    "test": "yarn run test:machine && yarn run test:node",
+    "test": "yarn run test:node && yarn run test:machine",
     "test:machine": "yarn run test:machine:integration && yarn run test:machine:unit",
     "test:machine:integration": "./scripts/test.sh",
     "test:machine:unit": "jest --testPathPattern=test/machine/unit --bail --forceExit",
