--- a/node/package.json
+++ b/node/package.json
@@ -22,6 +22,7 @@
     "@types/chai": "4.1.7",
     "@types/dotenv-safe": "5.0.3",
     "@types/jest": "24.0.11",
+    "@types/loglevel": "1.5.4",
     "@types/node": "11.13.8",
     "chai": "4.2.0",
     "dotenv-extended": "2.4.0",
@@ -30,14 +31,14 @@
     "firebase-server": "1.0.1",
     "ganache-cli": "6.4.3",
     "ganache-core": "2.5.5",
+    "jest": "24.7.1",
     "jest-cli": "24.7.1",
     "jest-dot-reporter": "1.0.7",
-    "jest": "24.7.1",
+    "rollup": "1.10.1",
     "rollup-plugin-commonjs": "9.3.4",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-typescript2": "0.21.0",
-    "rollup": "1.10.1",
     "truffle": "5.0.12",
     "ts-jest": "24.0.2",
     "ts-mockito": "2.3.1",
@@ -52,6 +53,7 @@
     "ethers": "4.0.27",
     "eventemitter3": "^3.1.0",
     "firebase": "5.10.1",
+    "loglevel": "^1.6.1",
     "p-queue": "^5.0.0",
     "typescript-memoize": "^1.0.0-alpha.3",
     "uuid": "^3.3.2"
