[repo] Bump solidity code to 0.5.8 (#1389)
* Bump solidity code to 0.5.8

* Fix lock file

* Fix yarn lock

* Temporarily skip solc native binary usage

--- a/apps/package.json
+++ b/apps/package.json
@@ -25,14 +25,17 @@
     "@types/mocha": "5.2.6",
     "chai": "4.2.0",
     "ethereum-waffle": "2.0.11",
-    "solc": "0.5.8",
     "ethers": "4.0.27",
     "ethlint": "1.2.4",
     "mocha": "6.1.4",
+    "solc": "0.5.8",
     "truffle": "5.0.12",
     "truffle-deploy-registry": "0.5.1",
     "truffle-hdwallet-provider": "1.0.8",
     "ts-mocha": "6.0.0",
     "tslint": "5.16.0"
+  },
+  "resolutions": {
+    "ethereum-waffle/solc": "0.5.8"
   }
 }
