--- a/contracts/package.json
+++ b/contracts/package.json
@@ -49,5 +49,8 @@
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
     "zos-lib": "2.2.3"
+  },
+  "resolutions": {
+    "ethereum-waffle/solc": "0.5.8"
   }
 }
