--- a/high-roller-bot/package.json
+++ b/high-roller-bot/package.json
@@ -23,7 +23,7 @@
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
-    "start": "env-cmd development ts-node src/"
+    "start": "env-cmd -e development ts-node src/"
   },
   "bugs": {
     "url": "https://github.com/counterfactual/monorepo/issues"
@@ -31,12 +31,12 @@
   "dependencies": {
     "@counterfactual/node": "0.1.16",
     "@counterfactual/types": "0.0.9",
-    "eventemitter3": "^3.1.0"
+    "eventemitter3": "^3.1.2"
   },
   "devDependencies": {
     "env-cmd": "9.0.1",
     "ethers": "4.0.27",
-    "jest": "24.7.1",
+    "jest": "24.8.0",
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
     "typescript": "3.4.5",
