--- a/playground/package.json
+++ b/playground/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "stencil build --debug && cp src/_redirects www/_redirects",
     "serve": "stencil build --dev --watch --serve",
-    "start": "env-cmd development stencil build --dev --watch --serve",
+    "start": "env-cmd -e development stencil build --dev --watch --serve",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "lint:fix": "tslint -c tslint.json -p tsconfig.json --fix",
     "test": "yarn test:spec",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@counterfactual/node": "0.1.16",
     "@counterfactual/types": "0.0.9",
-    "@stencil/core": "0.18.1-0",
+    "@stencil/core": "0.18.1",
     "@stencil/router": "0.3.3",
     "@stencil/sass": "0.2.1",
     "eventemitter3": "3.1.2"
@@ -38,6 +38,6 @@
     "jest-cli": "23.6.0",
     "puppeteer": "1.15.0",
     "rollup-plugin-replace": "2.2.0",
-    "workbox-build": "4.1.1"
+    "workbox-build": "4.3.1"
   }
 }
