--- a/node/package.json
+++ b/node/package.json
@@ -8,11 +8,7 @@
   "scripts": {
     "build": "tsc -p . && rollup -c",
     "build:watch": "tsc -p . && rollup -c -w",
-    "test": "yarn run test:node && yarn run test:machine",
-    "test:machine": "yarn run test:machine:integration && yarn run test:machine:unit",
-    "test:machine:integration": "./scripts/test.sh",
-    "test:machine:unit": "jest --testPathPattern=test/machine/unit --bail --forceExit",
-    "test:node": "jest --testPathIgnorePatterns=test/machine --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
+    "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "lint": "tslint -c tslint.json -p ."
