--- a/cf.js/tsconfig.json
+++ b/cf.js/tsconfig.json
@@ -6,5 +6,8 @@
     "outDir": "dist/",
     "types": ["jest"]
   },
+  "references": [
+    { "path": "../types" }
+  ],
   "include": ["src", "test"]
 }
