--- a/dapp-high-roller/tsconfig.json
+++ b/dapp-high-roller/tsconfig.json
@@ -12,6 +12,9 @@
     // @types/mocha has a duplicate conflict, this is the suggested temp fix.
     "skipLibCheck": true,
   },
+  "references": [
+    { "path": "../types" }
+  ],
   "include": [
     "src"
   ]
