--- a/node-provider/package.json
+++ b/node-provider/package.json
@@ -9,8 +9,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.json && rollup -c",
-    "test": "tsc -b && jest --runInBand --detectOpenHandles --bail --forceExit",
+    "build": "tsc -b . && rollup -c",
+    "test": "tsc -b . && jest --runInBand --detectOpenHandles --bail --forceExit",
     "test-debug": "node --inspect-brk jest --runInBand",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "lint": "tslint -c tslint.json -p .",
