--- a/node/package.json
+++ b/node/package.json
@@ -6,8 +6,8 @@
   "types": "dist/src/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p . && rollup -c",
-    "build:watch": "tsc -p . && rollup -c -w",
+    "build": "tsc -b . && rollup -c",
+    "build:watch": "tsc -b . && rollup -c -w",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
     "lint:fix": "tslint -c tslint.json -p . --fix",
