--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -18,6 +18,9 @@
     ],
     "types": ["jest", "ethers"]
   },
+  "references": [
+    { "path": "../types" }
+  ],
   "include": ["src"],
   "exclude": ["__mocks__", "src/**/*.spec.ts", "src/**/*.e2e.ts"]
 }
