--- a/types/package.json
+++ b/types/package.json
@@ -4,11 +4,11 @@
   "description": "TypeScript typings for common Counterfactual types",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "iife": "dist/index-iife.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p . && rollup -c"
+    "build": "tsc -b . && rollup -c"
   },
   "devDependencies": {
     "ethers": "4.0.27",
