--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "outDir": "dist"
   },
-  "include": ["src/*"]
+  "include": ["src/*.ts"]
 }
