--- a/high-roller-bot/package.json
+++ b/high-roller-bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/high-roller-bot",
-  "version": "0.0.9",
+  "version": "0.0.16",
   "description": "A bot for the High Roller Playground dApp.",
   "author": "Counterfactual",
   "homepage": "https://github.com/counterfactual/monorepo",
@@ -18,8 +18,7 @@
     "url": "git+https://github.com/counterfactual/monorepo.git"
   },
   "scripts": {
-    "build": "echo 'No build necessary'",
-    "postinstall": "sh ./scripts/postinstall.sh",
+    "heroku-postbuild": "sh ./scripts/heroku-postbuild.sh",
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
