--- a/tic-tac-toe-bot/tsconfig.do-not-edit-merged.json
+++ b/tic-tac-toe-bot/tsconfig.do-not-edit-merged.json
@@ -27,7 +27,6 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "target": "es2017",
-    "typeRoots": ["./node_modules/@counterfactual/typescript-typings/types"],
-    "types": ["jsonwebtoken", "knex", "koa", "koa__cors", "uuid", "jest"]
+    "typeRoots": ["./node_modules/@counterfactual/typescript-typings/types"]
   }
 }
