--- a/node/package.json
+++ b/node/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "24.0.12",
     "@types/loglevel": "1.5.4",
     "@types/node": "12.0.2",
+    "@types/pg": "7.4.14",
     "chai": "4.2.0",
     "dotenv-extended": "2.4.0",
     "dotenv-safe": "6.1.0",
@@ -52,6 +53,9 @@
     "firebase": "6.0.2",
     "loglevel": "^1.6.1",
     "p-queue": "^5.0.0",
+    "pg": "7.9.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.17",
     "typescript-memoize": "^1.0.0-alpha.3",
     "uuid": "^3.3.2"
   }
