Update package name to include org scope (#1589)

--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgresql-node-connector",
+  "name": "@counterfactual/postgresql-node-connector",
   "version": "0.0.1",
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
   "license": "MIT"
