--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/playground-server",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "description": "A backend for the Playground app.",
   "author": "Counterfactual",
   "homepage": "https://github.com/counterfactual/monorepo",
@@ -11,7 +11,8 @@
     "test": "tests"
   },
   "files": [
-    "src"
+    "src",
+    "scripts"
   ],
   "repository": {
     "type": "git",
