--- a/node/package.json
+++ b/node/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@counterfactual/apps": "0.1.1",
-    "@firebase/app-types": "0.4.0",
+    "@counterfactual/firebase-server": "0.0.1",
     "@types/chai": "4.1.7",
     "@types/dotenv-safe": "5.0.3",
     "@types/jest": "24.0.12",
@@ -26,7 +26,6 @@
     "dotenv-extended": "2.4.0",
     "dotenv-safe": "6.1.0",
     "ethereum-waffle": "2.0.12",
-    "firebase-server": "1.0.2",
     "ganache-cli": "6.4.3",
     "ganache-core": "2.5.5",
     "jest": "24.8.0",
@@ -46,11 +45,11 @@
   "dependencies": {
     "@counterfactual/cf.js": "0.1.1",
     "@counterfactual/contracts": "0.1.1",
+    "@counterfactual/firebase-client": "0.0.1",
     "@counterfactual/types": "0.0.9",
     "@firebase/util": "0.2.17",
     "ethers": "4.0.28",
     "eventemitter3": "^3.1.2",
-    "firebase": "6.1.0",
     "loglevel": "^1.6.1",
     "p-queue": "^5.0.0",
     "pg": "7.11.0",
