--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -2,5 +2,6 @@
   "name": "@counterfactual/postgresql-node-connector",
   "version": "0.0.1",
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
