--- a/tic-tac-toe-bot/package.json
+++ b/tic-tac-toe-bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/tic-tac-toe-bot",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "A bot for the Tic Tac Toe Playground dApp.",
   "author": "Counterfactual",
   "homepage": "https://github.com/counterfactual/monorepo",
@@ -35,6 +35,7 @@
     "eventemitter3": "^3.1.2"
   },
   "devDependencies": {
+    "@counterfactual/firebase-server": "0.0.1",
     "env-cmd": "9.0.2",
     "ethers": "4.0.28",
     "jest": "24.8.0",
