--- a/high-roller-bot/package.json
+++ b/high-roller-bot/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/counterfactual/monorepo/issues"
   },
   "dependencies": {
+    "@counterfactual/firebase-client": "0.0.2",
     "@counterfactual/node": "0.1.22",
     "@counterfactual/types": "0.0.9",
     "eventemitter3": "^3.1.2"
