--- a/tic-tac-toe-bot/package.json
+++ b/tic-tac-toe-bot/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/counterfactual/monorepo/issues"
   },
   "dependencies": {
+    "@counterfactual/firebase-client": "0.0.2",
     "@counterfactual/dapp-tic-tac-toe": "0.1.2",
     "@counterfactual/node": "0.1.22",
     "@counterfactual/types": "^0.0.9",
