Specify yarn and node engines everywhere (#1626)

--- a/apps/package.json
+++ b/apps/package.json
@@ -4,6 +4,10 @@
   "description": "Collection of various apps built on Counterfactual",
   "repository": "github.com/counterfactual/monorepo",
   "license": "MIT",
+  "engines": {
+    "yarn": "^1.10",
+    "node": "10.15.3"
+  },
   "files": [
     "build"
   ],
