--- a/dapp-high-roller/package.json
+++ b/dapp-high-roller/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@counterfactual/dapp-high-roller",
   "version": "0.1.0",
+  "engines": {
+    "yarn": "^1.10",
+    "node": "10.15.3"
+  },
   "scripts": {
     "netlify": "sh netlify.sh",
     "build": "stencil build && cp src/_redirects www/_redirects",
