--- a/firebase-server/package.json
+++ b/firebase-server/package.json
@@ -4,6 +4,10 @@
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
   "license": "MIT",
+  "engines": {
+    "yarn": "^1.10",
+    "node": "10.15.3"
+  },
   "scripts": {
     "build": "tsc -p . && rollup -c",
     "build:watch": "tsc -p . && rollup -c -w",
