--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.1",
   "description": "Smart contracts for Counterfactual",
   "license": "MIT",
+  "engines": {
+    "yarn": "^1.10",
+    "node": "10.15.3"
+  },
   "files": [
     "build",
     "contracts",
