--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@counterfactual/playground",
   "version": "0.1.3",
+  "engines": {
+    "yarn": "^1.10",
+    "node": "10.15.3"
+  },
   "scripts": {
     "build": "stencil build --debug && cp src/_redirects www/_redirects",
     "serve": "stencil build --dev --watch --serve",
