Add yarn.lock so that Heroku environments are consistent (#1627)
* Add package-lock.json so that Heroku environments are consistent

* Replace package-lock.json with yarn.lock

--- a/high-roller-bot/.gitignore
+++ b/high-roller-bot/.gitignore
@@ -1,1 +1,5 @@
 test/test-db.sqlite
+
+# Needed for consistent Heroku deployment environment
+# See: https://github.com/yarnpkg/yarn/issues/5428#issuecomment-389623755
+!yarn.lock
