--- a/playground-server/.gitignore
+++ b/playground-server/.gitignore
@@ -1,2 +1,6 @@
 **/test-db.sqlite
 .env
+
+# Needed for consistent Heroku deployment environment
+# See: https://github.com/yarnpkg/yarn/issues/5428#issuecomment-389623755
+!yarn.lock
