Fix yarn to 1.12.3 (#1628)
* Fix yarn to 1.13.0

* Update Dockerfile

* Update to 1.12.3

* Install yarn 1.12.3 on specific tests in CI

* Add sudo

--- a/cf-wallet.js/package.json
+++ b/cf-wallet.js/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "iife": "dist/index-iife.js",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "files": [
