--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/counterfactual/monorepo",
   "license": "MIT",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "main": "src/index.ts",
