--- a/cf.js/package.json
+++ b/cf.js/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "iife": "dist/index-iife.js",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "files": [
