--- a/dapp-tic-tac-toe/package.json
+++ b/dapp-tic-tac-toe/package.json
@@ -2,7 +2,7 @@
   "name": "@counterfactual/dapp-tic-tac-toe",
   "version": "0.1.2",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "dependencies": {
