--- a/firebase-client/package.json
+++ b/firebase-client/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "scripts": {
