--- a/node-provider/package.json
+++ b/node-provider/package.json
@@ -5,7 +5,7 @@
   "types": "dist/src/index.d.ts",
   "module": "dist/index.es.js",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "files": [
