--- a/playground/package.json
+++ b/playground/package.json
@@ -2,7 +2,7 @@
   "name": "@counterfactual/playground",
   "version": "0.1.3",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "scripts": {
