--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -4,7 +4,7 @@
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
   "license": "MIT",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "dependencies": {}
