--- a/types/package.json
+++ b/types/package.json
@@ -8,7 +8,7 @@
   "iife": "dist/index-iife.js",
   "license": "MIT",
   "engines": {
-    "yarn": "^1.10",
+    "yarn": "1.12.3",
     "node": "10.15.3"
   },
   "scripts": {
