[postgres-connector] Add proper build and testing around package (#1618)
* Update packaging of postgres connector

* Refactor store interface; add first postgres test skeleton

* Introduce env vars

* Introduce linting

* Fix playground build

* Fix tests

* Add first test using postgres store service

* Simplify test

* Add postgres service to CI

* Update build

* Remove unneeded dep

* Add README

* WIP mid debugging test failure

* Rename entity; update table creation; add test

* Add method to get one proposed app instance

* Remove duplicate method

* Postgres test passes!

* Update entity name

* Fix build order

* Update circle config

* Get all tests passing again

* Update store implementation; add one more test case

* Remove unnecessary conditionals

* Fix build

* Update CI step for yarn version

--- a/postgresql-node-connector/tsconfig.json
+++ b/postgresql-node-connector/tsconfig.json
@@ -5,11 +5,7 @@
     "declarationDir": "dist/",
     "outDir": "dist/",
     "resolveJsonModule": true,
-    "typeRoots": [
-      "../../node_modules/@types",
-      "../../node_modules/@counterfactual/typescript-typings/types"
-    ],
-    "types": ["jest"]
+    "types": ["jest", "node"]
   },
   "references": [{ "path": "../types" }],
   "include": ["src", "test"]
