--- a/node/.env.defaults
+++ b/node/.env.defaults
@@ -4,3 +4,9 @@ FIREBASE_MESSAGING_SERVER_KEY="messageKey"
 FIREBASE_STORE_SERVER_KEY="storeKey"
 FIREBASE_STORE_PREFIX_KEY="dev-store"
 GANACHE_PORT="8545"
+POSTGRES_USER="postgres"
+POSTGRES_HOST="localhost"
+POSTGRES_DATABASE="postgres"
+POSTGRES_PASSWORD=""
+POSTGRES_PORT=5432
+POSTGRES_STORE_KEY="dev"
