--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -1,11 +1,39 @@
 {
   "name": "@counterfactual/postgresql-node-connector",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "dist/index.js",
+  "types": "dist/src/index.d.ts",
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
   "license": "MIT",
   "engines": {
     "yarn": "1.12.3",
     "node": "10.15.3"
   },
-  "dependencies": {}
+  "scripts": {
+    "prepublish": "tsc -b . && rollup -c",
+    "build": "tsc -b . && rollup -c",
+    "build:watch": "tsc -b . && rollup -c -w",
+    "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
+    "lint:fix": "tslint -c tslint.json -p . --fix",
+    "lint": "tslint -c tslint.json -p ."
+  },
+  "dependencies": {
+    "@counterfactual/types": "0.0.10",
+    "pg": "7.11.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.17"
+  },
+  "devDependencies": {
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.4",
+    "@types/pg": "7.4.14",
+    "dotenv-extended": "2.4.0",
+    "jest": "24.8.0",
+    "rollup": "1.13.0",
+    "rollup-plugin-commonjs": "10.0.0",
+    "rollup-plugin-node-resolve": "5.0.1",
+    "rollup-plugin-typescript2": "0.21.1",
+    "tslint": "5.17.0",
+    "typescript": "3.5.1"
+  }
 }
