--- a/node/package.json
+++ b/node/package.json
@@ -25,7 +25,8 @@
     "@types/dotenv-safe": "5.0.3",
     "@types/jest": "24.0.12",
     "@types/loglevel": "1.5.4",
-    "@types/node": "12.0.4",
+    "@types/node": "12.0.7",
+    "@types/pg": "7.4.14",
     "chai": "4.2.0",
     "dotenv-extended": "2.4.0",
     "dotenv-safe": "6.1.0",
@@ -35,12 +36,12 @@
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "jest-dot-reporter": "1.0.8",
-    "rollup": "1.13.0",
+    "rollup": "1.14.5",
     "rollup-plugin-commonjs": "10.0.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.0.1",
     "rollup-plugin-typescript2": "0.21.1",
-    "truffle": "5.0.20",
+    "truffle": "5.0.21",
     "ts-jest": "24.0.2",
     "ts-mockito": "2.3.1",
     "tslint": "5.17.0",
@@ -51,7 +52,8 @@
     "@counterfactual/contracts": "0.1.1",
     "@counterfactual/firebase-client": "0.0.3",
     "@counterfactual/types": "0.0.10",
-    "ethers": "4.0.28",
+    "@firebase/util": "0.2.18",
+    "ethers": "4.0.29",
     "eventemitter3": "^3.1.2",
     "loglevel": "^1.6.1",
     "p-queue": "^5.0.0",
