--- a/high-roller-bot/.env-cmdrc
+++ b/high-roller-bot/.env-cmdrc
@@ -7,7 +7,7 @@
     "FIREBASE_SERVER_PORT": "5555",
     "NODE_MNEMONIC": "cargo asset giggle spin elite earth become cube economy panda walk slice",
     "ETHEREUM_NETWORK": "kovan",
-    "NODE_ENV": "development"
+    "NODE_ENV": "development",
     "LOG_LEVEL": "DEBUG"
   },
   "test": {
