--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/postgresql-node-connector",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
@@ -20,16 +20,16 @@
   "dependencies": {
     "@counterfactual/types": "0.0.11",
     "pg": "7.11.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.17"
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.2.18"
   },
   "devDependencies": {
     "@types/jest": "24.0.13",
-    "@types/node": "12.0.4",
+    "@types/node": "12.0.8",
     "@types/pg": "7.4.14",
     "dotenv-extended": "2.4.0",
     "jest": "24.8.0",
-    "rollup": "1.13.0",
+    "rollup": "1.15.1",
     "rollup-plugin-commonjs": "10.0.0",
     "rollup-plugin-node-resolve": "5.0.1",
     "rollup-plugin-typescript2": "0.21.1",
