Implements JSON-RPC as a new message format for the Node methods and events (#1613)
* installed rpc-server

* added rpc-server as bundledDependency

* overriden router.dispatch to pass requestHandler

* NodeController extends Controller (rpc-server)

* added router instantiation

* applied jsonRpcMethod decorator

* installed RPC on PS to use deserializers

* replaced old createChannel call with RPC one

* exposed chan_proposeInstall

* exposed chan_proposeInstallVirtual

* exposed chan_getState

* exposed chan_takeAction

* exposed chan_uninstall

* exposed chan_getAppInstances

* exposed chan_install

* exposed chan_installVirtual

* exposed chan_rejectInstall

* exposed chan_getAppInstance

* linted imports on all modified controllers

* bundled rpc-server in CF.js

* exposed chan_getFreeBalanceState

* exposed chan_deposit

* exposed chan_withdraw

* extended NodeRouter from Router

* encoded NodeRouter.dispatch() response as JSONRPC

* removed unnecessary jsonapi exports

* adapted callRawMethod to work with JSONRPC

* adapted handleNodeMethodResponse to work with JSONRPC

* channel collateralization now uses JSONRPC

* adapted getFreeBalanceState call from Playground

* adapted deposit call from Playground

* adapted withdraw call from Playground

* added `router.dispatch` to Node Interface for PG

* added missing cast to Node.MethodResponse

* updated prototypal/rpc-server

* cleaned up imports, added rpc exports to the Node

* NodeRouter using jsonRpcSerializeAsResponse

* updated named exports for rpc-server

* updated rpc-server, fixed rollup config for CF.js + node

* added cast for createChannelTransactionResult

* connected RPC router to Node events

* reformatted events in JSONRPC

* added basic error serialization

* rebasing with master

* finished porting messaging methods on CF.Provider

* updated rpc-server, made all tests pass

* fixed linting issues on sp

--- a/cf.js/package.json
+++ b/cf.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/cf.js",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "The bridge between web applications and Counterfactual wallets.",
   "types": "dist/src/index.d.ts",
   "main": "dist/index.js",
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "@counterfactual/node-provider": "0.1.2",
-    "@counterfactual/types": "0.0.11",
+    "@counterfactual/types": "0.0.12",
     "ethers": "4.0.29",
-    "eventemitter3": "^3.1.2"
+    "eventemitter3": "^3.1.2",
+    "rpc-server": "prototypal/rpc-server"
   }
 }
