--- a/cf-wallet.js/package.json
+++ b/cf-wallet.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/cf-wallet.js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "The bridge between web applications and Counterfactual wallets.",
   "types": "dist/src/index.d.ts",
   "main": "dist/index.js",
@@ -34,10 +34,11 @@
   },
   "dependencies": {
     "@counterfactual/node-provider": "0.1.2",
-    "@counterfactual/types": "0.0.11",
+    "@counterfactual/types": "0.0.12",
     "ethers": "4.0.29",
     "eventemitter3": "^3.1.2",
     "global": "^4.3.2",
+    "rpc-server": "prototypal/rpc-server",
     "typedoc": "^0.14.2"
   }
 }
