--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -38,8 +38,8 @@
   },
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
-    "@counterfactual/node": "0.1.26",
-    "@counterfactual/types": "0.0.11",
+    "@counterfactual/node": "0.2.0",
+    "@counterfactual/types": "0.0.12",
     "@counterfactual/typescript-typings": "0.1.0",
     "@ebryn/jsonapi-ts": "0.1.17",
     "@koa/cors": "^3.0.0",
@@ -53,6 +53,7 @@
     "koa-compose": "^4.1.0",
     "logepi": "^1.0.5",
     "pg": "^7.10.0",
+    "rpc-server": "prototypal/rpc-server",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
