[node] Extract blockchain context out of Node testing infra (#1715)
* Introduce chain package

* Update yarn lock

* Update dependencies

* Node consumes chain package for tests

* Remove stale file

* Update README

* Update chain test

* Update lint config

* Add chain package to build script

--- a/node/package.json
+++ b/node/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@counterfactual/apps": "0.1.1",
+    "@counterfactual/chain": "0.0.1",
     "@counterfactual/firebase-server": "0.0.1",
     "@counterfactual/postgresql-node-connector": "0.0.2",
     "@types/chai": "4.1.7",
