--- a/firebase-client/package.json
+++ b/firebase-client/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@counterfactual/types": "0.0.11",
+    "@firebase/app-types": "^0.4.0",
+    "@firebase/util": "^0.2.19",
     "@types/firebase": "3.2.1",
     "rollup": "1.12.3",
     "typescript": "3.5.1"
