Update prototypal/jsonrpc-server (#1721)
* Update prototypal/jsonrpc-server

* Pin rpc-server dep version

* Update yarn.lock to reflect version pin

* Update package version

--- a/cf.js/package.json
+++ b/cf.js/package.json
@@ -37,6 +37,6 @@
     "@counterfactual/types": "0.0.12",
     "ethers": "4.0.29",
     "eventemitter3": "^3.1.2",
-    "rpc-server": "prototypal/rpc-server"
+    "rpc-server": "0.0.1"
   }
 }
