--- a/playground-server/package.json
+++ b/playground-server/package.json
@@ -53,7 +53,7 @@
     "koa-compose": "^4.1.0",
     "logepi": "^1.0.5",
     "pg": "^7.10.0",
-    "rpc-server": "prototypal/rpc-server",
+    "rpc-server": "0.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
