--- a/cf-wallet.js/package.json
+++ b/cf-wallet.js/package.json
@@ -38,7 +38,7 @@
     "ethers": "4.0.29",
     "eventemitter3": "^3.1.2",
     "global": "^4.3.2",
-    "rpc-server": "prototypal/rpc-server",
+    "rpc-server": "0.0.1",
     "typedoc": "^0.14.2"
   }
 }
