--- a/node/package.json
+++ b/node/package.json
@@ -58,7 +58,7 @@
     "eventemitter3": "^3.1.2",
     "loglevel": "^1.6.1",
     "p-queue": "^5.0.0",
-    "rpc-server": "prototypal/rpc-server",
+    "rpc-server": "0.0.1",
     "typescript-memoize": "^1.0.0-alpha.3",
     "uuid": "^3.3.2"
   }
