Implements the Wallet UI package (#1704)
* scaffolded wallet-ui with CRA2

* added react-router-dom@^5.0.1

* imported first UI component

* imported assets from Playground

Co-authored-by: Santiago Persico <persi93@gmail.com>

* removed CRA default styles

* routing, layout, UI up to registration (wip)

Co-authored-by: Santiago Persico <persi93@gmail.com>

* fixed bad renaming

Co-authored-by: Santiago Persico <persi93@gmail.com>

* set default caption

* removed explicit captions

* refactored styles to use proper imports

Co-authored-by: Santiago Persico <persi93@gmail.com>

* refactoring UI components

Co-authored-by: Santiago Persico <persi93@gmail.com>

* finished fixing welcome screen

* added placeholder pages and basic route paths

* forcing types to prevent conflicts with Stencil

* restricted dapp-high-roller types to prevent conflict with React

* using WidgetSpinner in FormButton

* added placeholder classname for AccountContext

* started adding basic UI tests

* adjusted UI for modal screens

* finished look & feel for Account Registration

* updated UI tests

* added login link to Account Registration screen

* implemented Deposit screen

* add form input validation

* added AccountContext for authenticated/non-authenticated

* added LayoutHeader for /channels

* built UI for State Channels screen

* added "Discover State Channel apps" button

* added basic implementation of Node menu

* fixed nested margins for Channel List

* fixed duplicate styles

* adds redux to the app

* updated yarn.lock

* first contact with the Hub API

--- a/dapp-high-roller/tsconfig.json
+++ b/dapp-high-roller/tsconfig.json
@@ -3,19 +3,13 @@
   "compilerOptions": {
     "allowUnreachableCode": false,
     "declaration": false,
-    "lib": [
-      "dom",
-      "es2017"
-    ],
+    "lib": ["dom", "es2017"],
     "jsx": "react",
     "jsxFactory": "h",
     // @types/mocha has a duplicate conflict, this is the suggested temp fix.
     "skipLibCheck": true,
+    "types": ["node"]
   },
-  "references": [
-    { "path": "../types" }
-  ],
-  "include": [
-    "src"
-  ]
+  "references": [{ "path": "../types" }],
+  "include": ["src"]
 }
