--- a/simple-hub-server/package.json
+++ b/simple-hub-server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@counterfactual/playground-server",
-  "version": "0.1.18",
-  "description": "A backend for the Playground app.",
+  "name": "@counterfactual/simple-hub-server",
+  "version": "0.0.1",
+  "description": "An example backend server for the Playground app that acts as a hub.",
   "author": "Counterfactual",
   "homepage": "https://github.com/counterfactual/monorepo",
   "license": "MIT",
