Bulk dependency update (#1770)
* Update dependency rollup to v1.13.1

* Update dependency @firebase/util to v0.2.18

* Update dependency @types/node to v12.0.7

* Update dependency env-cmd to v9.0.3

* Update dependency firebase to v6.1.1

* Update dependency ethers to v4.0.29

* Update dependency truffle to v5.0.21

* Update dependency rollup to v1.14.4

* Update dependency truffle-contract to v4.0.19

* Update dependency zos-lib to v2.3.1

* Update dependency @stencil/sass to v1

* Update dependency rollup to v1.14.5

* Update dependency lerna to v3.15.0

* Pin dependency uuid to 3.3.2

* Fix merge mistake

* Update dependency @types/node to v12.0.10

* Update circleci/postgres Docker tag to v9.6.14

* Update dependency eth-gas-reporter to v0.2.1

* Update dependency firebase to v6.2.2

* Update dependency ethers to v4.0.31

* Update dependency puppeteer to v1.18.0

* Update dependency rollup-plugin-typescript2 to v0.21.2

* Update dependency rollup-plugin-node-resolve to v5.0.4

* Update dependency rollup to v1.16.2

* Fix firebase dep issue

* update solc

* Pin dependencies (#1754)

* Update dependency @types/react to v16.8.22 (#1755)

* Update dependency eventemitter3 to v4 (#1752)

* Update dependency eventemitter3 to v4

* update yarn.locks

* fix mistake

* Update dependency tslint to v5.18.0 (#1750)

* update solc

* Update dependency tslint to v5.18.0

* Update dependency tslint to v5.18.0

* yarns

* fix yarn.lock

--- a/firebase-client/package.json
+++ b/firebase-client/package.json
@@ -17,10 +17,10 @@
   },
   "devDependencies": {
     "@counterfactual/types": "0.0.16",
-    "@firebase/app-types": "^0.4.0",
-    "@firebase/util": "^0.2.19",
+    "@firebase/app-types": "0.4.0",
+    "@firebase/util": "0.2.20",
     "@types/firebase": "3.2.1",
-    "rollup": "1.12.3",
+    "rollup": "1.16.2",
     "typescript": "3.5.1"
   },
   "dependencies": {
