--- a/chain/package.json
+++ b/chain/package.json
@@ -20,14 +20,14 @@
   "devDependencies": {
     "@counterfactual/contracts": "0.1.3",
     "@counterfactual/types": "0.0.16",
-    "ethers": "4.0.29",
+    "ethers": "4.0.31",
     "ganache-core": "2.5.5",
-    "rollup": "1.13.0",
-    "rollup-plugin-typescript2": "0.21.1",
+    "rollup": "1.16.2",
+    "rollup-plugin-typescript2": "0.21.2",
     "truffle": "5.0.20",
     "typescript": "3.5.1"
   },
-  "peerDependencies": {
+  "dependencies": {
     "ganache-core": "2.5.5"
   }
 }
