--- a/firebase-server/package.json
+++ b/firebase-server/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@counterfactual/firebase-client": "0.0.3",
     "@firebase/app-types": "0.4.0",
+    "@firebase/util": "0.2.20",
     "@types/jest": "24.0.12",
     "firebase-server": "1.0.2",
     "jest": "24.8.0",
-    "uuid": "^3.3.2"
+    "uuid": "3.3.2"
   },
   "dependencies": {
-    "firebase": "6.0.2",
-    "firebase-server": "1.0.2"
+    "firebase": "6.0.2"
   }
 }
