--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.0.8",
-    "@types/react": "16.8.20",
+    "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "node-sass": "4.12.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.1.0",
+    "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.4"
+    "@types/react-router-dom": "4.3.4"
   }
 }
